--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -1,13 +1,13 @@
 .services-main {
     display: flex;
-    justify-content: center; /* Centra el contenido horizontalmente */
-    align-items: center;    /* Centra el contenido verticalmente */
-    height: 500px;          /* Fija la altura del main */
-    width: auto;            /* Ancho automático */
+    justify-content: center; 
+    align-items: center;    
+    height: 500px;         
+    width: auto;           
     padding: 20px;
   }
   
   .content {
-    text-align: center;     /* Centra el texto */
+    text-align: center;    
   }
   
