--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,13 +1,108 @@
-.contact-main {
-    display: flex;
-    justify-content: center; 
-    align-items: center;    
-    height: 500px;         
-    width: auto;            
-    padding: 20px;
+main {
+  .form_wrap {
+      width: 1200px;
+      height: 600px;
+      margin: 50px auto;
+      display: flex;
+      background: #fff;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+
+      .cantact_info {
+          width: 38%;
+          position: relative;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          background: #4091EC;
+          color: #fff;
+          text-align: center;
+
+          .info_title {
+              margin-bottom: 60px;
+
+              span {
+                  font-size: 100px;
+                  display: block;
+                  margin-bottom: 15px;
+              }
+
+              h2 {
+                  font-size: 35px;
+              }
+          }
+
+          .info_items {
+              p {
+                  display: flex;
+                  align-items: center;
+                  font-size: 16px;
+                  font-weight: 600;
+                  margin-bottom: 10px;
+
+                  span {
+                      font-size: 30px;
+                      margin-right: 10px;
+                  }
+              }
+          }
+      }
+
+      .form_contact {
+          width: 62%;
+          padding: 30px 40px;
+          display: flex;
+          flex-direction: column;
+          color: #222;
+          h2 {
+              font-size: 25px;
+              font-weight: 600;
+              color: #303030;
+              margin-bottom: 30px;
+          }
+
+          .user_info {
+              display: flex;
+              flex-direction: column;
+
+              label {
+                  font-weight: 600;
+                  margin-bottom: 5px;
+              }
+
+              input,
+              textarea {
+                  width: 100%;
+                  padding: 8px 0px 5px;
+                  margin-bottom: 20px;
+                  border: none;
+                  border-bottom: 2px solid #D1D1D1;
+                  font-size: 14px;
+                  color: #5A5A5A;
+              }
+
+              textarea {
+                  resize: vertical;
+              }
+
+              input[type="button"] {
+                  width: 180px;
+                  background: #4091EC;
+                  padding: 10px;
+                  border: none;
+                  border-radius: 25px;
+                  color: #fff;
+                  font-size: 16px;
+                  font-weight: 600;
+                  cursor: pointer;
+
+                  &:hover {
+                      background: #3371B6;
+                  }
+              }
+          }
+      }
   }
-  
-  .content {
-    text-align: center;   
-  }
-  
+}
